--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,12 +16,16 @@ h1 {
   font-size: 2.5em;
 }
 
+b {
+  font-weight:bold;
+}
+
 .header-logo {
   height: 30px;
 }
 
 .carousel-item {
-  height: 90vh;
+  height: 100vh;
   text-align: center;
   .d-flex {
     margin: 0 auto;
@@ -41,6 +45,11 @@ h1 {
 .card {
   background-color: rgba(0, 0, 0, 0.1);
   border: none !important;
+  min-height:240px;
+}
+
+.modal-css {
+  background:$blue;
 }
 
 .blue1 {
