--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,11 @@
 @import "./_colors.scss";
+@import "~bootstrap/scss/bootstrap";
+
+
 body {
   color: $body-text;
   font-family: "Noto Sans JP", sans-serif;
-  font-size: 1.5em;
+  font-size: 1.1em;
 }
 h1,
 h2,
