--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,33 +1,43 @@
 @import "./_colors.scss";
 @import "~bootstrap/scss/bootstrap";
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 
 body {
   color: $body-text;
-  font-family: 'Open Sans', sans-serif;
-  font-size:1em;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
 }
 
-h1,h2, h3, h4, h5, p {
-color:#000;
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  color: #000;
 }
 
+h4 {
+  text-transform: uppercase;
+  font-size: 1.3em;
+  color: #888;
+}
 
 b {
-  font-weight:600;
+  font-weight: 600;
 }
 
 .caption {
   text-transform: uppercase;
-  font-size: .9em;
-  font-weight:600;
-  color:#888;
+  font-size: 0.9em;
+  font-weight: 600;
+  color: #888;
 }
 
 span.badge {
-  font-size:100%;
+  font-size: 100%;
   &.badge-secondary {
-    background:#AAA;
+    background: #aaa;
   }
 }
