--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,12 @@
 @import "./_colors.scss";
 @import "~bootstrap/scss/bootstrap";
 
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600&display=swap");
 
 body {
   color: $body-text;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1em;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 1.1em;
 }
 
 h1,
@@ -21,7 +21,9 @@ p {
 h4 {
   text-transform: uppercase;
   font-size: 1.3em;
+  font-weight: 600;
   color: #888;
+  letter-spacing: .05em;
 }
 
 b {
